<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/devicesitem"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#F0F3F6"
	>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="3"
		>
		<TextView android:id="@+id/devicestitle"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:gravity="center_horizontal"
			android:text="@string/devicessetting"
			android:textSize="40sp"
			android:textStyle="bold" 
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		>
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="10dp"
		    >
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvdevicesid" 
		    	android:textSize="20sp" 
		    	android:text="@string/devicesid" 
		    	android:layout_height="30dp" 
		    	android:layout_marginTop="30dp"	    	
		    	android:layout_alignBottom="@+id/txtdevicesid" 
		    	android:layout_alignParentStart="true" 
		    	android:layout_marginStart="16dp">
		    </TextView>
		    <TextView 
		    	android:id="@id/txtdevicesid"
		    	android:layout_width="210dp"
		    	android:layout_height="30dp"
		    	android:layout_toEndOf="@id/tvdevicesid"
		    	android:layout_marginTop="30dp"		    	
		    	android:maxLength="9"
		    >
		    </TextView>
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvdevicesname" 
		    	android:textSize="20sp" 
		    	android:text="@string/devicesname" 
		    	android:layout_height="wrap_content" 
		    	android:layout_alignBaseline="@+id/txtdevicesname" 
		    	android:layout_alignBottom="@+id/txtdevicesname" 
		    	android:layout_toStartOf="@+id/txtdevicesid">
		    </TextView>
		    <EditText 
		    	android:id="@+id/txtdevicesname"
		    	android:layout_width="210dp"
		    	android:layout_height="wrap_content"
		    	android:layout_toEndOf="@id/tvdevicesname"
		    	android:layout_below="@id/txtdevicesid"
		    	android:inputType="text"
		    	android:singleLine="false"
		    />
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvlocation" 
		    	android:textSize="20sp" 
		    	android:text="@string/deviceslocation" 
		    	android:layout_height="wrap_content" 
		    	android:layout_alignBaseline="@+id/txtlocation" 
		    	android:layout_alignBottom="@+id/txtlocation" 
		    	android:layout_alignStart="@+id/tvdevicesname">
		    </TextView>
		    <EditText 
		        android:id="@+id/txtlocation"
		    	android:layout_width="210dp"
		    	android:layout_height="wrap_content"
		    	android:layout_toEndOf="@id/tvlocation"
		    	android:layout_below="@id/txtdevicesname"
		    	android:inputType="number"
		    />
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvstatus" 
		    	android:textSize="20sp" 
		    	android:text="@string/devicesstatus" 
		    	android:layout_height="wrap_content" 
		    	android:layout_alignBaseline="@+id/switch1" 
		    	android:layout_alignBottom="@+id/switch1" 
		    	android:layout_toStartOf="@id/txtlocation">
		    </TextView>
		    <Switch
		        android:id="@+id/switch1"
		        android:layout_width="210dp"
		    	android:layout_height="wrap_content"
		    	android:layout_toEndOf="@id/tvstatus"
		    	android:layout_below="@id/txtlocation"
		         />

		    </RelativeLayout>
	</LinearLayout>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="3"
		>
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="10dp"
		    >
			<Button
		    android:id="@+id/btndevicesdelete"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentEnd="true"
		    android:layout_marginStart="10dp"
		    android:text="@string/delete"
		    />
		    <Button 
			android:id="@+id/btndevicesedit"
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginStart="10dp"
			android:layout_toStartOf="@id/btndevicesdelete"
			android:text="@string/save"    
		    />
		    <Button
		        android:id="@+id/btndevicescancel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="10dp"
		        android:layout_toStartOf="@id/btndevicesedit"
		        android:text="@string/cancel"
		    /> 
		    <Button 
		        android:id="@+id/btndevicesrefresh"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toStartOf="@id/btndevicescancel"
		        android:text="@string/refresh" />
		</RelativeLayout>
	</LinearLayout>	
</LinearLayout>