<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/devicesitem1"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#F0F3F6"
	>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="3"
		>
		<TextView android:id="@+id/devicestitle1"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:gravity="center_horizontal"
			android:text="@string/devicessetting"
			android:textSize="40sp"
			android:textStyle="bold" 
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		>
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="10dp"
		    >
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvdevicesid1" 
		    	android:textSize="20sp" 
		    	android:text="@string/devicesid" 
		    	android:layout_height="30dp" 
		    	android:layout_marginTop="30dp"	    	
		    	android:layout_alignBottom="@+id/txtdevicesid1" 
		    	android:layout_alignParentStart="true" 
		    	android:layout_marginStart="16dp">
		    </TextView>
		    <TextView 
		    	android:id="@id/txtdevicesid1"
		    	android:layout_width="210dp"
		    	android:layout_height="30dp"
		    	android:layout_toEndOf="@id/tvdevicesid1"
		    	android:layout_marginTop="30dp"		    	
		    	android:maxLength="9"
		    >
		    </TextView>
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvdevicesname1" 
		    	android:textSize="20sp" 
		    	android:text="@string/devicesname" 
		    	android:layout_height="wrap_content" 
		    	android:layout_alignBaseline="@+id/txtdevicesname1" 
		    	android:layout_alignBottom="@+id/txtdevicesname1" 
		    	android:layout_toStartOf="@+id/txtdevicesid1">
		    </TextView>
		    <EditText 
		    	android:id="@+id/txtdevicesname1"
		    	android:layout_width="210dp"
		    	android:layout_height="wrap_content"
		    	android:layout_toEndOf="@id/tvdevicesname1"
		    	android:layout_below="@id/txtdevicesid1"
		    	android:inputType="text"
		    	android:singleLine="false"
		    />
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvlocation1" 
		    	android:textSize="20sp" 
		    	android:text="@string/deviceslocation" 
		    	android:layout_height="wrap_content" 
		    	android:layout_alignBaseline="@+id/txtlocation1" 
		    	android:layout_alignBottom="@+id/txtlocation1" 
		    	android:layout_alignStart="@+id/tvdevicesname1">
		    </TextView>
		    <EditText 
		        android:id="@+id/txtlocation1"
		    	android:layout_width="210dp"
		    	android:layout_height="wrap_content"
		    	android:layout_toEndOf="@id/tvlocation1"
		    	android:layout_below="@id/txtdevicesname1"
		    	android:inputType="number"
		    />
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvstatus1" 
		    	android:textSize="20sp" 
		    	android:text="@string/devicesstatus" 
		    	android:layout_height="wrap_content" 
		    	android:layout_alignBaseline="@+id/switch11" 
		    	android:layout_alignBottom="@+id/switch11" 
		    	android:layout_toStartOf="@id/txtlocation1">
		    </TextView>
		    <Switch
		        android:id="@+id/switch11"
		        android:layout_width="210dp"
		    	android:layout_height="wrap_content"
		    	android:layout_toEndOf="@id/tvstatus1"
		    	android:layout_below="@id/txtlocation1"
		         />

		    </RelativeLayout>
	</LinearLayout>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="3"
		>
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="10dp"
		    >
			<Button
		    android:id="@+id/btndevicesdelete1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentEnd="true"
		    android:layout_marginStart="10dp"
		    android:text="@string/delete"
		    />
		    <Button 
			android:id="@+id/btndevicesedit1"
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginStart="10dp"
			android:layout_toStartOf="@id/btndevicesdelete1"
			android:text="@string/save"    
		    />
		    <Button
		        android:id="@+id/btndevicescancel1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="10dp"
		        android:layout_toStartOf="@id/btndevicesedit1"
		        android:text="@string/cancel"
		    /> 
		    <Button 
		        android:id="@+id/btndevicesrefresh1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toStartOf="@id/btndevicescancel1"
		        android:text="@string/refresh" />
		</RelativeLayout>
	</LinearLayout>	
</LinearLayout>