<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/roomitem"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#F0F3F6"
	>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="3"
		>
		<TextView android:id="@+id/roomtitle"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:gravity="center_horizontal"
			android:text="@string/roommanage"
			android:textSize="40sp"
			android:textStyle="bold" 
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		>
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="10dp"
		    >
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvroomid" 
		    	android:textSize="20sp" 
		    	android:text="@string/roomid" 
		    	android:layout_height="30dp" 
		    	android:layout_marginTop="30dp"	    	
		    	android:layout_alignBottom="@+id/txtroomid" 
		    	android:layout_alignParentStart="true" 
		    	android:layout_marginStart="16dp">
		    </TextView>
		    <TextView 
		    	android:id="@id/txtroomid"
		    	android:layout_width="210dp"
		    	android:layout_height="30dp"
		    	android:layout_toEndOf="@id/tvroomid"
		    	android:layout_marginTop="30dp"		    	
		    	android:maxLength="9"
		    >
		    </TextView>
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvroomname" 
		    	android:textSize="20sp" 
		    	android:text="@string/roomname" 
		    	android:layout_height="wrap_content" 
		    	android:layout_alignBaseline="@+id/txtroomname" 
		    	android:layout_alignBottom="@+id/txtroomname" 
		    	android:layout_toStartOf="@+id/txtroomid">
		    </TextView>
		    <EditText 
		    	android:id="@+id/txtroomname"
		    	android:layout_width="210dp"
		    	android:layout_height="wrap_content"
		    	android:layout_toEndOf="@id/tvroomname"
		    	android:layout_below="@id/txtroomid"
		    	android:inputType="text"
		    	android:singleLine="false"
		    />
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvroomtype" 
		    	android:textSize="20sp" 
		    	android:text="@string/roomtype" 
		    	android:layout_height="wrap_content" 
		    	android:layout_alignBaseline="@+id/txtroomtype" 
		    	android:layout_alignBottom="@+id/txtroomtype" 
		    	android:layout_alignStart="@+id/tvroomname">
		    </TextView>
		    <EditText 
		        android:id="@+id/txtroomtype"
		    	android:layout_width="210dp"
		    	android:layout_height="wrap_content"
		    	android:layout_toEndOf="@id/tvroomtype"
		    	android:layout_below="@id/txtroomname"
		    	android:inputType="number"
		    />
		    <ListView 
            	android:id="@+id/showdevicesStatsByRoom"
            	android:layout_width="match_parent"
           		android:layout_height="match_parent"
           		android:scrollbarAlwaysDrawVerticalTrack="true" 
            	android:layout_below="@id/txtroomtype"	
            	/>
		</RelativeLayout>
	</LinearLayout>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="3"
		>
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="10dp"
		    >
			<Button
		    android:id="@+id/btnroomdelete"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentEnd="true"
		    android:layout_marginStart="10dp"
		    android:text="@string/delete"
		    />
		    <Button 
			android:id="@+id/btnroomedit"
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginStart="10dp"
			android:layout_toStartOf="@id/btnroomdelete"
			android:text="@string/save"    
		    />
		    <Button
		        android:id="@+id/btnroomcancel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginStart="10dp"
		        android:layout_toStartOf="@id/btnroomedit"
		        android:text="@string/cancel"
		    /> 
		    <Button 
		        android:id="@+id/btnroomrefresh"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toStartOf="@id/btnroomcancel"
		        android:text="@string/refresh" />
		</RelativeLayout>
	</LinearLayout>	
</LinearLayout>