<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/devicesitem"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#F0F3F6"
	>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="3"
		>
		<TextView android:id="@+id/devicestitle"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:gravity="center_horizontal"
			android:text="@string/useredit"
			android:textSize="40sp"
			android:textStyle="bold" 
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		>
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="10dp"
		    >
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvuserid" 
		    	android:textSize="20sp" 
		    	android:text="@string/userid" 
		    	android:layout_height="30dp" 
		    	android:layout_marginTop="30dp"	    	
		    	android:layout_alignBottom="@+id/txtuserid" 
		    	android:layout_alignParentStart="true" 
		    	android:layout_marginStart="16dp">
		    </TextView>
		    <TextView 
		    	android:id="@id/txtuserid"
		    	android:layout_width="210dp"
		    	android:layout_height="30dp"
		    	android:layout_toEndOf="@id/tvuserid"
		    	android:layout_marginTop="30dp"		    	
		    	android:maxLength="9"
		    >
		    </TextView>
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvusername" 
		    	android:textSize="20sp" 
		    	android:text="@string/account" 
		    	android:layout_height="wrap_content" 
		    	android:layout_alignBaseline="@+id/txtusername" 
		    	android:layout_alignBottom="@+id/txtusername" 
		    	android:layout_toStartOf="@+id/txtuserid">
		    </TextView>
		    <EditText 
		    	android:id="@+id/txtusername"
		    	android:layout_width="210dp"
		    	android:layout_height="wrap_content"
		    	android:layout_toEndOf="@id/tvusername"
		    	android:layout_below="@id/txtuserid"
		    	android:inputType="text"
		    	android:singleLine="false"
		    />
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvpassword" 
		    	android:textSize="20sp" 
		    	android:text="@string/password" 
		    	android:layout_height="wrap_content" 
		    	android:layout_alignBaseline="@+id/txtpassword" 
		    	android:layout_alignBottom="@+id/txtpassword" 
		    	android:layout_alignStart="@+id/tvusername">
		    </TextView>
		    <EditText 
		        android:id="@+id/txtpassword"
		    	android:layout_width="210dp"
		    	android:layout_height="wrap_content"
		    	android:layout_toEndOf="@id/tvpassword"
		    	android:layout_below="@id/txtusername"
		    	android:inputType="textPassword"
		    />
		    <TextView 
		        android:layout_width="90dp" 
		    	android:id="@+id/tvfamilyid" 
		    	android:textSize="20sp" 
		    	android:text="@string/familyid" 
		    	android:layout_height="wrap_content" 
		    	android:layout_alignBaseline="@+id/txtfamilyid" 
		    	android:layout_alignBottom="@+id/txtfamilyid" 
		    	android:layout_toStartOf="@id/txtpassword">
		    </TextView>
		    <EditText
		        android:id="@+id/txtfamilyid"
		        android:layout_width="210dp"
		    	android:layout_height="wrap_content"
		    	android:layout_toEndOf="@id/tvfamilyid"
		    	android:layout_below="@id/txtpassword"
		         />

		    </RelativeLayout>
	</LinearLayout>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="3"
		>
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="10dp"
		    >
			<Button
		    android:id="@+id/btnuserinfoedit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentEnd="true"
		    android:layout_marginStart="10dp"
		    android:text="@string/save"
		    />
		    <Button 
			android:id="@+id/btnuserinfocancel"
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginStart="10dp"
			android:layout_toStartOf="@id/btnuserinfoedit"
			android:text="@string/cancel"    
		    />

		</RelativeLayout>
	</LinearLayout>	
</LinearLayout>