<LinearLayout	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:baselineAligned="false"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <EditText 
                android:id="@+id/NotesEdit1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="top"
                android:text="@string/notesedit"
                android:singleLine="false"/>         
        </RelativeLayout>
        <TextView 
            android:id="@+id/TimeView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:baselineAligned="false"
        >
        <RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    >
        <Button 
            android:id="@+id/btnNotesEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/save"
            />
        <Button 
            android:id="@+id/btnNotesCancel"
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginStart="10dp"
			android:layout_toStartOf="@id/btnNotesEdit"
			android:text="@string/cancel"
			/>
        <Button
            android:id="@+id/btnNotesDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/delete"
            />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>