<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#F0F3F6"
    >
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/addroom"
            android:textSize="40sp"
            />
    </LinearLayout>
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp">
            <TextView 
                android:id="@+id/tvAddRoomName"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/roomname"
                android:textSize="20sp"
                android:layout_alignBaseline="@+id/txtAddRoomName"
                android:layout_alignBottom="@+id/txtAddRoomName"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                />
            <EditText 
                android:id="@+id/txtAddRoomName"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tvAddRoomName"
                android:inputType="text"
                />
            <TextView 
                android:id="@+id/tvAddRoomType"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/roomtype"
                android:textSize="20sp"
                android:layout_alignBaseline="@+id/txtAddRoomType"
                android:layout_alignBottom="@+id/txtAddRoomType"
                android:layout_toStartOf="@+id/txtAddRoomName"
                />
            <EditText 
                android:id="@+id/txtAddRoomType"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tvAddRoomType"
                android:layout_below="@id/txtAddRoomName"
                android:inputType="number"
                />
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAddRoomType"
                android:text="@string/ExplainRoomType"
                android:layout_marginTop="30dp"
                android:layout_marginStart="16dp"/>
        </RelativeLayout>
    </LinearLayout>
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3">
            <RelativeLayout 
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10dp"
                >
                <Button 
                    android:id="@+id/btnAddRoom"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/add"
                    />
                <Button 
                    android:id="@+id/btnAddRoomCancel"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/btnAddRoom"
                    android:text="@string/cancel"/>
            </RelativeLayout>
        </LinearLayout>

    
</LinearLayout>