<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/Ipitem"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#F0F3F6"
	>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="3"
		>
		<TextView android:id="@+id/Iptitle"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:gravity="center_horizontal"
			android:text="@string/Ipsetting"
			android:textSize="40sp"
			android:textStyle="bold" 
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		>
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="10dp"
		    >
		    <TextView
		        android:layout_width="90dp" 
		    	android:id="@+id/tvip" 
		    	android:textSize="20sp" 
		    	android:text="@string/ip" 
		    	android:layout_height="wrap_content" 
		    	android:layout_alignBaseline="@+id/txtip" 
		    	android:layout_alignBottom="@+id/txtip" 
		    	 >
		    </TextView>

		    <EditText
		        android:id="@+id/txtip"
		        android:layout_width="210dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_marginTop="128dp"
		        android:layout_toEndOf="@id/tvip"
		        android:ems="10"
		        android:singleLine="false" />

		    </RelativeLayout>
	</LinearLayout>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="3"
		>
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="10dp"
		    >
			<Button
		    android:id="@+id/btnipedit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentEnd="true"
		    android:layout_marginStart="10dp"
		    android:text="@string/save"
		    />
		    <Button 
			android:id="@+id/btnipcancel"
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginStart="10dp"
			android:layout_toStartOf="@id/btnipedit"
			android:text="@string/cancel"    
		    />	    
		</RelativeLayout>
	</LinearLayout>	
</LinearLayout>